--- a/css/styles.css
+++ b/css/styles.css
@@ -13,22 +13,23 @@ a{
     font-weight: bold;
 }
 
-.web {
+.web{
     color: #2196F3;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
+    line-height: 30.52px;
 }
-.header-studio {
+.header-studio{
     color: black;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
+    line-height: 30.52px;
 }
 
-.nav, .contact-link {
+.nav, .contact-link-header{
     list-style-type: none;
-    text-decoration: none;
 }
 
 .nav{
@@ -36,17 +37,19 @@ a{
     font-weight: 500;
     font-size: 14px;
     color: #212121;
+    line-height: 16.41px;
 }
 
-.nav:hover, .contact-link:hover{
-    color: #2196F3;
-}
-
-.contact-link{
-    font-family: Roboto;
+.contact-link-header{
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 14px;
+    line-height: 16.41px;
     color: #757575;
+}
+
+.nav:hover, .contact-link-header:hover{
+    color: #2196F3;
 }
 
 #title{
@@ -86,23 +89,32 @@ ul{
     line-height: 16.41px;
 }
 
-.details, {
+.details{
     color:#757575;
     font-family: 'Roboto', sans-serif;
-    font-size: 400px;
-    line-height: 24px;
+    font-weight: 400;
+}
+
+.section {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42.19px;
+    text-align: center;
 }
 
 .job{
     color:#757575;
     font-family: 'Roboto', sans-serif;
-    align:center;
+    text-align: center;
 }
 
-.section {
-    font-family: Roboto;
-    font-weight: 700;
-    font-size: 36px;
+.name{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18.75px;
+    text-align: center;
 }
 
 body{
@@ -110,31 +122,45 @@ body{
     margin: 0;
 }
 
-.footer{
+footer{
     background-color: #2F303A;
+    text-decoration: none;
 }
 
-.footer-studio {
+.footer-studio{
     color: white;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
+    line-height: 30.52px;
 }
 
-.address {
+a{
+    text-decoration: none;
+}
+
+address{
+    font-style: normal;
+}
+.address{
     color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 16.41px;
+    text-decoration: none;
 }
 
-.contact {
+.contact-link-footer{
     color: rgba(255, 255, 255, 0.6);
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 16.41px;
+}
+
+.contact-link-footer:hover{
+    color: #2196F3;
 }
 
 .button-portofolio{
