--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link 
-href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
+href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
 rel="stylesheet">
 
 a{
@@ -176,6 +176,10 @@ address{
 }
 
 .button-portofolio:hover{
+    background-color: #2196F3;
+}
+
+.button-portofolio:focus{
     background-color: #2196F3;
 }
 
