--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --color-text:#757575;
     --text-fontfamily: 'Roboto', sans-serif;
     --title-fontfamily: 'Raleway', sans-serif;
+    --font-weight-title: 700;
 }
 
 a{
@@ -17,7 +18,7 @@ a{
 .web{
     color: #2196F3;
     font-family: var(--title-fontfamily);
-    font-weight: 700;
+    font-weight: var(--font-weight-title);
     font-size: 26px;
     line-height: 30.52px;
 }
@@ -25,7 +26,7 @@ a{
 .header-studio{
     color: black;
     font-family: var(--title-fontfamily);
-    font-weight: 700;
+    font-weight: var(--font-weight-title);
     font-size: 26px;
     line-height: 30.52px;
 }
@@ -90,7 +91,7 @@ ul{
 
 .attention-details{
     font-family: var(--text-fontfamily);
-    font-weight: 700px;
+    font-weight: var(--font-weight-title);
     font-size: 14px;
     line-height: 16.41px;
 }
@@ -102,7 +103,7 @@ ul{
 
 .section {
     font-family: var(--text-fontfamily);
-    font-weight: 700;
+    font-weight: var(--font-weight-title);
     font-size: 36px;
     line-height: 42.19px;
     text-align: center;
@@ -201,7 +202,7 @@ address{
 
 .pictures-title{
     font-family: var(--text-fontfamily);
-    font-weight: 700;
+    font-weight: var(--font-weight-title);
     font-size: 18px;
     line-height: 36px;
     color: #212121;
